--- a/style.css
+++ b/style.css
@@ -5,3 +5,23 @@ html, body {
 canvas {
   display: block;
 }
+
+* {
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+   
+}
+body{
+    min-height: 80vh;
+    min-width: 80vw;
+    display: flex;  
+}
+main{
+    width:100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+    padding: 2rem 4rem;
+}
